docs/1.6/api/enums/custompermissionname.md
**[js-miniapp-sdk](../README.md)**

> [Globals](../README.md) / CustomPermissionName

# Enumeration: CustomPermissionName

## Index

### Enumeration members

* [CONTACT\_LIST](custompermissionname.md#contact_list)
* [LOCATION](custompermissionname.md#location)
* [PROFILE\_PHOTO](custompermissionname.md#profile_photo)
* [USER\_NAME](custompermissionname.md#user_name)

## Enumeration members

### CONTACT\_LIST

•  **CONTACT\_LIST**:  = "rakuten.miniapp.user.CONTACT\_LIST"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:4](https://github.com/rakutentech/js-miniapp/blob/ac43cde/js-miniapp-bridge/src/types/custom-permissions.ts#L4)*

___

### LOCATION

•  **LOCATION**:  = "rakuten.miniapp.device.LOCATION"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:5](https://github.com/rakutentech/js-miniapp/blob/ac43cde/js-miniapp-bridge/src/types/custom-permissions.ts#L5)*

___

### PROFILE\_PHOTO

•  **PROFILE\_PHOTO**:  = "rakuten.miniapp.user.PROFILE\_PHOTO"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:3](https://github.com/rakutentech/js-miniapp/blob/ac43cde/js-miniapp-bridge/src/types/custom-permissions.ts#L3)*

___

### USER\_NAME

•  **USER\_NAME**:  = "rakuten.miniapp.user.USER\_NAME"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:2](https://github.com/rakutentech/js-miniapp/blob/ac43cde/js-miniapp-bridge/src/types/custom-permissions.ts#L2)*
