docs/1.9/api/enums/custompermissionname.md
**[js-miniapp-sdk](../README.md)**

> [Globals](../README.md) / CustomPermissionName

# Enumeration: CustomPermissionName

## Index

### Enumeration members

* [ACCESS\_TOKEN](custompermissionname.md#access_token)
* [CONTACT\_LIST](custompermissionname.md#contact_list)
* [LOCATION](custompermissionname.md#location)
* [PROFILE\_PHOTO](custompermissionname.md#profile_photo)
* [SEND\_MESSAGE](custompermissionname.md#send_message)
* [USER\_NAME](custompermissionname.md#user_name)

## Enumeration members

### ACCESS\_TOKEN

•  **ACCESS\_TOKEN**:  = "rakuten.miniapp.user.ACCESS\_TOKEN"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:5](https://github.com/rakutentech/js-miniapp/blob/270cb2a/js-miniapp-bridge/src/types/custom-permissions.ts#L5)*

___

### CONTACT\_LIST

•  **CONTACT\_LIST**:  = "rakuten.miniapp.user.CONTACT\_LIST"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:4](https://github.com/rakutentech/js-miniapp/blob/270cb2a/js-miniapp-bridge/src/types/custom-permissions.ts#L4)*

___

### LOCATION

•  **LOCATION**:  = "rakuten.miniapp.device.LOCATION"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:6](https://github.com/rakutentech/js-miniapp/blob/270cb2a/js-miniapp-bridge/src/types/custom-permissions.ts#L6)*

___

### PROFILE\_PHOTO

•  **PROFILE\_PHOTO**:  = "rakuten.miniapp.user.PROFILE\_PHOTO"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:3](https://github.com/rakutentech/js-miniapp/blob/270cb2a/js-miniapp-bridge/src/types/custom-permissions.ts#L3)*

___

### SEND\_MESSAGE

•  **SEND\_MESSAGE**:  = "rakuten.miniapp.user.action.SEND\_MESSAGE"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:7](https://github.com/rakutentech/js-miniapp/blob/270cb2a/js-miniapp-bridge/src/types/custom-permissions.ts#L7)*

___

### USER\_NAME

•  **USER\_NAME**:  = "rakuten.miniapp.user.USER\_NAME"

*Defined in [js-miniapp-bridge/src/types/custom-permissions.ts:2](https://github.com/rakutentech/js-miniapp/blob/270cb2a/js-miniapp-bridge/src/types/custom-permissions.ts#L2)*
